--- a/Results Summary Component/index.html
+++ b/Results Summary Component/index.html
@@ -12,16 +12,14 @@
 <body>
     <main>
         <section class="result">
-            <h1>Your Result</h1>
+            <h1 class="result-title">Your Result</h1>
             <div class="score-container">
-                <span class="score">
-                    <strong>76</strong>
-                    <span>of 100</span>
-                </span>
+                <strong>76</strong>
+                <span>of 100</span>
             </div>
             <div class="score-text">
-                <h2>Great</h2>
-                <p>You scored higher than 65% of the peoplewho have taken these tests.</p>
+                <h2 class="score-text-title">Great</h2>
+                <p class="score-text-description">You scored higher than 65% of the peoplewho have taken these tests.</p>
             </div>
         </section>
 
