--- a/Results Summary Component/index.html
+++ b/Results Summary Component/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
     <meta charset="UTF-8">
@@ -24,10 +24,10 @@
         </section>
 
         <section class="summary">
-            <h1>Summary</h1>
+            <h1 class="summary-title">Summary</h1>
             <div class="data-container">
                 <div class="data">
-                    <h2 class="data-title">
+                    <h2 class="data-title data-t1">
                         Reaction
                     </h2>
                     <span>
@@ -36,7 +36,7 @@
                     </span>
                 </div>
                 <div class="data">
-                    <h2 class="data-title">
+                    <h2 class="data-title data-t2">
                         Memory
                     </h2>
                     <span>
@@ -44,7 +44,7 @@
                         <span class="data-max-score"> / 100</span>
                     </span>
                 </div>
-                <div class="data">
+                <div class="data data-t3">
                     <h2 class="data-title">
                         Verbal
                     </h2>
@@ -54,7 +54,7 @@
                     </span>
                 </div>
                 <div class="data">
-                    <h2 class="data-title">
+                    <h2 class="data-title data-t4">
                         Visual
                     </h2>
                     <span>
