Exclusão de arquivos desnecessários

--- a/Results Summary Component/index.html
+++ b/Results Summary Component/index.html
@@ -7,11 +7,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Result Summary Analist">
     <title>Results Summary Component - By Front End Mentor</title>
 </head>
 <body>
     <main>
-        <section class="result">
+        <section aria-label="Pontuação" class="result">
             <h1 class="result-title">Your Result</h1>
             <div class="score-container">
                 <strong>76</strong>
@@ -23,7 +24,7 @@
             </div>
         </section>
 
-        <section class="summary">
+        <section aria-label="Resumo" class="summary">
             <h1 class="summary-title">Summary</h1>
             <div class="data-container">
                 <div class="data">
