--- a/Huddle Landing Page/index.html
+++ b/Huddle Landing Page/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
@@ -26,5 +27,10 @@
             </button>
         </div>
     </main>
+    <footer>
+        <img src="images/facebook-svgrepo-com.svg" alt="Ícone Facebook">
+        <img src="images/twitter-svgrepo-com.svg" alt="Ícone Twitter">
+        <img src="images/instagram-svgrepo-com.svg" alt="Ícone Instagram">
+    </footer>
 </body>
 </html>
