--- a/QR Code Component/index.html
+++ b/QR Code Component/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
 
@@ -10,6 +11,12 @@
     <title>QR Code Component - Front End Mentor</title>
 </head>
 <body>
-    
+    <main>
+        <img src="images/image-qr-code.png" alt="" class="main-img">
+        <h1 class="main-title">
+            Improve your front-end skills by building projects
+        </h1>
+        <p class="main-description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </main>
 </body>
 </html>
