--- a/Order Summary Component/index.html
+++ b/Order Summary Component/index.html
@@ -8,10 +8,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <title>Order Summary Card - Front End Mentor</title>
 </head>
 <body>
-    
+    <main>
+        <header>
+
+        </header>
+
+        <div class="main-txt">
+            <h1 class="main-title">
+                Order Summary
+            </h1>
+        <div class="plans-container">
+            <img src="images/icon-music.svg" alt="">
+            <span class="type-price">
+                <h2 class="plan">Annual Plan</h2>
+                <span class="price"> $59.99/year</span>
+                <span class="change">
+                    <a href="#">Change</a>
+                </span>
+            </span>
+        </div>
+        <button>Proceed to Payment</button>
+        <a href="#">Cancel Order</a>
+    </main>
 </body>
 </html>
