--- a/Order Summary Component/index.html
+++ b/Order Summary Component/index.html
@@ -21,18 +21,22 @@
             <h1 class="main-title">
                 Order Summary
             </h1>
+            <p class="main-description">
+                You can now listen to millions of songs, audiobooks, and podcasts on any 
+                device anywhere you like!
+            </p>
+        </div>
+
         <div class="plans-container">
             <img src="images/icon-music.svg" alt="">
             <span class="type-price">
                 <h2 class="plan">Annual Plan</h2>
                 <span class="price"> $59.99/year</span>
-                <span class="change">
-                    <a href="#">Change</a>
-                </span>
             </span>
+            <a class="change" href="#">Change</a>
         </div>
         <button>Proceed to Payment</button>
-        <a href="#">Cancel Order</a>
+        <a class="cancel" href="#">Cancel Order</a>
     </main>
 </body>
 </html>
