--- a/Stats Preview Card Component/index.html
+++ b/Stats Preview Card Component/index.html
@@ -14,7 +14,7 @@
 <body>
     <main>
         <section class="text-container">
-            <h1 class="text-title">Get insights that help your business grow.</h1>
+            <h1 class="text-title">Get <strong>insights</strong> that help your business grow.</h1>
             <p class="text-descrip">
                 Discover the benefits of data analytics and make better decisions regarding revenue, customer 
                 experience, and overall efficiency.
