--- a/3-Column Preview Card Component/index.html
+++ b/3-Column Preview Card Component/index.html
@@ -14,9 +14,23 @@
 <body>
     <main>
         <div class="card">
-            <img src="" alt="" class="icon">
-            <h1 class="title"></h1>
-            <p class="descrip"></p>
+            <img src="images/icon-sedans.svg" alt="" class="icon">
+            <h1 class="title">Sedans</h1>
+            <p class="descrip">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+            <button>Learn More</button>
+        </div>
+        <div class="card">
+            <img src="images/icon-suvs.svg" alt="" class="icon">
+            <h1 class="title">SUVs</h1>
+            <p class="descrip">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+            and off-road adventures.</p>
+            <button>Learn More</button>
+        </div>
+        <div class="card">
+            <img src="images/icon-luxury.svg" alt="" class="icon">
+            <h1 class="title">Luxury</h1>
+            <p class="descrip">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+            rental and arrive in style.</p>
             <button>Learn More</button>
         </div>
     </main>
